--- a/style.css
+++ b/style.css
@@ -1,14 +1,41 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     background: #111213;
     color: white;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin: auto;
-    width: 70%;
-    padding: 10px;
+    
 }
 
-.align-center-text {
-    text-align: center; 
+.home-page-card  {
+    width: 1200px;
+    background: #181818;
+    margin: 20px auto;
+    width: 400px;
+    padding: 40px;
+    border: 2px solid #FFFFFF;
+    text-align: center;
+}
+
+h1 {
+    padding-bottom: 20px;
+}
+
+h2 {
+    padding: 5px;
+    padding-top: 20px;
+}
+
+p {
+    margin-bottom: 10px;
+}
+
+.home-page-content {
+    text-align: left;
 }
 
 a {
@@ -16,13 +43,5 @@ a {
 }
 
 img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 110%;
-}
-
-div {
-    padding-right: 50px;
-    padding-left: 50px;
+    width: 250px;
 }
