Update style.css, experiment with different display types

--- a/style.css
+++ b/style.css
@@ -1,21 +1,34 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 
 body {
     background: #111213;
     color: white;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;    
+}
+
+.header-test {
+    font-size: 18px;
+    list-style: none;
+    display: flex;
+}
+
+.description {
+    text-align: center;
+    font-size: 24px;
+}
+
+li {
+    margin: 10px;
+    padding: 10px;
 }
 
 .home-page-card  {
-    width: 1200px;
     background: #181818;
     margin: 20px auto;
-    width: 400px;
+    width: 1300px;
     padding: 40px;
     border: 2px solid #FFFFFF;
     text-align: center;
@@ -26,12 +39,17 @@ h1 {
 }
 
 h2 {
-    padding: 5px;
     padding-top: 20px;
 }
 
 p {
+    margin-top: 10px;
     margin-bottom: 10px;
+}
+
+ul,
+ol {
+    margin-left: 20px;
 }
 
 .home-page-content {
@@ -43,5 +61,7 @@ a {
 }
 
 img {
-    width: 250px;
+    width: 1050px;
+    border: 2px solid #FFFFFF;
+    margin: 40px;
 }
