--- a/style.css
+++ b/style.css
@@ -13,17 +13,22 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;    
 }
 
-.header-test {
+.header-links {
     font-size: 18px;
     list-style: none;
     display: inline-flex;
+}
+
+.header-links a {
+    display: inline-block;
+    background: #262626;
+    padding: 20px;
 }
 
 .description {
     text-align: center;
     font-size: 22px;
     margin-top: -100px;
-
 }
 
 li {
@@ -67,6 +72,5 @@ a {
 
 img {
     width: 1050px;
-    border-right: 20px double #FFFFFF;
     margin: 40px;
 }
