--- a/style.css
+++ b/style.css
@@ -10,20 +10,10 @@ html {
 body {
     background: #111213;
     color: white;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;    
+    font-family: Calibri, 'Trebuchet MS', sans-serif;    
 }
 
-.header-links {
-    font-size: 18px;
-    list-style: none;
-    display: inline-flex;
-}
-
-.header-links a {
-    display: inline-block;
-    background: #262626;
-    padding: 20px;
-}
+div.first-
 
 .description {
     text-align: center;
@@ -33,7 +23,7 @@ body {
 
 li {
     margin: 10px;
-    padding: 10px;
+    padding-left: 10px;
 }
 
 .home-page-card  {
@@ -44,33 +34,16 @@ li {
     text-align: center;
 }
 
-h1 {
-    padding-bottom: 20px;
-}
-
-h2 {
-    padding-top: 20px;
-}
-
 p {
     margin-top: 10px;
     margin-bottom: 10px;
-}
-
-ul,
-ol {
-    margin-left: 20px;
-}
-
-.home-page-content {
-    text-align: left;
 }
 
 a {
     color: aqua;
 }
 
-img {
+img.gif-anime {
     width: 1050px;
     margin: 40px;
 }
