--- a/style.css
+++ b/style.css
@@ -8,38 +8,45 @@ html {
 }
 
 body {
-    background: #111213;
+    background: #18191b;
     color: white;
     font-family: Calibri, 'Trebuchet MS', sans-serif;    
 }
 
-div.hero {
+div.big-heading {
     border: 2px solid rgba(255, 255, 255, 0.2);  
     width: 1000px;
-    margin: 180px auto;
+    margin: 200px auto;
     margin-bottom: 400px;
     padding: 10px;
 }
 
 h1.big-heading {
-    font-size: 16px; 
-    margin: 0 0 40px 5px;   
+    font-weight: 100;
+    font-family: monospace;
+    color: aqua;
+    font-size: 18px; 
+    margin: 0 0 32px 5px;   
 }
 
 h2.big-heading {
-    font-size: 80px;
+    font-size: 70px;
     margin-top: 5px;
 }
 
 h3.big-heading {
-    font-size: 80px;
+    font-size: 70px;
     margin-top: 5px;
     color: rgba(255, 255, 255, 0.5);
 }
 
 p.big-heading {
-    font-size: 20px;
+    font-weight: 100;
+    font-size: 16px;
+    width: 580px;
     margin-top: 20px;
+    line-height: 26px; 
+    color: rgba(255, 255, 255, 0.5);
 }
 
 li {
@@ -57,3 +64,11 @@ a {
     display: block;
 }
 
+div.social {
+    margin: -680px 0 0 0;
+    display: block;
+}
+
+li.social {
+    list-style: none;
+}
