--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    /* border: 2px solid red; */
 }
 
 html {
@@ -55,13 +56,19 @@ p.big-heading {
 
 div.about-me-main {
     border: 2px solid rgba(255, 255, 255, 0.2);  
-    width: 1000px;
+    width: 900px;
     margin: 200px auto;
     margin-bottom: 400px;
     padding: 10px;
+    display: flex;
 }
 
 div.about-me {
+    display: inline-block;
+    padding-right: 24px;
+}
+
+div.about-me-photo {
     display: inline-block;
 }
 
@@ -71,13 +78,35 @@ h2.about-me {
 }
 
 p.about-me {
-    margin-bottom: 15px;
+    margin-bottom: 16px;
+    font-size: 18px;
     line-height: 26px; 
     color: rgba(255, 255, 255, 0.65);
 }
 
-img.about-me {
+div.about-me-list {
+    display: flex;
+}
+
+div.about-me-list1 {
     display: inline-block;
+    margin-right: 30px;
+}
+
+div.about-me-list2 {
+    display: inline-block;
+}
+
+ul.about-me {
+    padding-left: 20px;
+    line-height: 32px;
+    display: block;
+}
+
+img.about-me-photo {
+    display: flex;
+    width: 350px;
+    padding: 100px 10px;
 }
 
 /*--------------- Social media ---------------*/
@@ -102,4 +131,8 @@ li.social {
 
 a {
     color: aqua;
+}
+
+p {
+    font-size: 16px;
 }
