--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    /* border: 2px solid red; */
+    border: 2px solid red;
 }
 
 html {
@@ -88,19 +88,21 @@ div.about-me-list {
     display: flex;
 }
 
-div.about-me-list1 {
-    display: inline-block;
-    margin-right: 30px;
-}
-
-div.about-me-list2 {
-    display: inline-block;
-}
-
 ul.about-me {
     padding-left: 20px;
     line-height: 32px;
-    display: block;
+    width: 200px;
+    height: 100px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    
+}
+
+li.about-me-list {
+    display: inline-block;
+    margin-right: 30px;
+    
 }
 
 img.about-me-photo {
