--- a/style.css
+++ b/style.css
@@ -12,4 +12,35 @@ body {
     background: #18191b;
     color: white;
     font-family: Calibri, Arial, sans-serif;    
+    display: flex;
+    justify-content: center;
+    padding: 0 80px 0;
+}
+
+
+
+/* HEADER */
+
+.header {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    flex: 0 0 500px;
+    padding: 80px 0;
+}
+
+.header-container {
+    flex: 0 0 auto;
+}
+
+.header-links {
+    display: flex;
+    flex-direction: column;
+    margin: 60px 60px 0 0;
+}
+
+.social {
+    flex: 0 0 0;
 }
