--- a/style.css
+++ b/style.css
@@ -16,6 +16,11 @@ body {
     padding: 0 80px 0;
 }
 
+a {
+    text-decoration: none;
+    color: white;
+}
+
 /*================ HEADER ================*/
 
 .header {
