--- a/style.css
+++ b/style.css
@@ -9,11 +9,14 @@ html {
 }
 
 body {
+    height: 100vh;
     background: #18191b;
     color: rgb(150, 150, 150);
-    font-family: Arial, sans-serif;    
+    font-family: Arial, sans-serif; 
     display: flex;
+    justify-content: space-between;
     padding: 0 80px 0;
+    overflow: hidden; 
 }
 
 a {
@@ -24,9 +27,8 @@ a {
 /*================ HEADER ================*/
 
 .header {
-    position: fixed;
-    height: 100vh;
     display: flex;
+    flex: 0 0 45%;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
@@ -44,15 +46,15 @@ a {
 }
 
 .social {
-    flex: 0 0 1;
+    flex: 1;
 }
 
 /*================ MAIN ================*/
 
 .main {
-    max-width: 500px;
-    margin: 0 0 0 auto;
+    overflow-y: auto;
     display: flex;
+    flex: 0 1 45%; 
     flex-direction: column;
     padding: 80px 0;
     }
