--- a/style.css
+++ b/style.css
@@ -13,10 +13,15 @@ body {
     background: #18191b;
     color: rgb(150, 150, 150);
     font-family: Arial, sans-serif; 
+    overflow: hidden;   
+}
+
+.wrapper {
     display: flex;
     justify-content: space-between;
+    height: 100%;
     padding: 0 80px 0;
-    overflow: hidden; 
+
 }
 
 a {
@@ -28,7 +33,7 @@ a {
 
 .header {
     display: flex;
-    flex: 0 0 45%;
+    flex: 0 0 50%;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
@@ -54,7 +59,7 @@ a {
 .main {
     overflow-y: auto;
     display: flex;
-    flex: 0 1 45%; 
+    flex: 0 1 50%; 
     flex-direction: column;
     padding: 80px 0;
     }
