--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ body {
     justify-content: space-between;
     height: 100%;
     padding: 0 80px 0;
-
 }
 
 a {
@@ -31,7 +30,7 @@ a {
 
 /*================ HEADER ================*/
 
-.header {
+header {
     display: flex;
     flex: 0 0 50%;
     flex-direction: column;
@@ -56,7 +55,7 @@ a {
 
 /*================ MAIN ================*/
 
-.main {
+main {
     overflow-y: auto;
     display: flex;
     flex: 0 1 50%; 
