--- a/style.css
+++ b/style.css
@@ -13,14 +13,15 @@ body {
     background: #18191b;
     color: rgb(150, 150, 150);
     font-family: Arial, sans-serif; 
-    overflow: hidden;   
 }
 
 .wrapper {
     display: flex;
+    align-items: start;
     justify-content: space-between;
-    height: 100%;
+    min-height: 100%;
     padding: 0 80px 0;
+    gap: 5px;
 }
 
 a {
@@ -31,6 +32,8 @@ a {
 /*================ HEADER ================*/
 
 header {
+    position: sticky;
+    top: 0;
     display: flex;
     flex: 0 0 50%;
     flex-direction: column;
@@ -56,9 +59,12 @@ header {
 /*================ MAIN ================*/
 
 main {
-    overflow-y: auto;
     display: flex;
     flex: 0 1 50%; 
     flex-direction: column;
     padding: 80px 0;
     }
+
+main p {
+    display: block;
+}
