--- a/style.css
+++ b/style.css
@@ -9,10 +9,10 @@ html {
 }
 
 body {
-    height: 100vh;
     background: #18191b;
     color: rgb(150, 150, 150);
     font-family: Arial, sans-serif; 
+    display: flex;
 }
 
 .wrapper {
@@ -20,38 +20,26 @@ body {
     align-items: start;
     justify-content: space-between;
     min-height: 100%;
-    margin: 0 80px 0;
-    padding: 0 100px 0;
     gap: 15px;
-}
-
-a {
-    text-decoration: none;
-    color: white;
-}
-
-a:hover {
-    color: red;
-}
-
-p {
-    line-height: 1.6;
+    padding: 0 80px;
+    margin: 0 80px;
 }
 
 /*================ HEADER ================*/
 
 header {
     position: sticky;
+    height: 100vh;
     top: 0;
     display: flex;
     flex: 0 0 50%;
     flex-direction: column;
-    justify-content: space-between;
-    padding: 80px 0;
+    justify-content: space-between;    
 }
 
 .header-container {
     flex: 0 0 auto;
+    padding-top: 80px;
 }
 
 .my-name {
@@ -67,7 +55,7 @@ header {
 }
 
 .header-links {
-    display: flex;
+    display: inline-flex;
     flex-direction: column;
     margin: 60px 0 0 0;
 
@@ -77,18 +65,25 @@ header {
 
 .header-links a {
     display: flex;
-    flex: 0;
+    flex: 0 1 auto;
     padding: 16px 0;
 }
 
 .social {
+    display: inline-flex;
+    flex: 0 1 auto;
+    justify-content: space-around;
     align-self: flex-start;
+    gap: 16px;
+    padding-bottom: 80px;
 }
 
 header p {
+    display: inline-flex;   
+    max-width: 20rem;
     font-size: 16px;
     font-weight: 200;
-    margin-top: 16px;
+    margin-top: 1rem;
 }
 
 /*================ MAIN ================*/
@@ -102,4 +97,19 @@ main {
 
 main p {
     display: block;
+}
+
+/*======================================*/
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+a:hover {
+    color: red;
+}
+
+p {
+    line-height: 1.5;
 }
