--- a/style.css
+++ b/style.css
@@ -13,16 +13,18 @@ body {
     color: rgb(150, 150, 150);
     font-family: Arial, sans-serif; 
     display: flex;
+    justify-content: center;
 }
 
 .wrapper {
+    flex: 0 1 auto;
     display: flex;
     align-items: start;
     justify-content: space-between;
     min-height: 100%;
-    gap: 15px;
-    padding: 0 80px;
-    margin: 0 80px;
+    max-width: 75%;
+    gap: 15px;  
+    padding: 0 20px;
 }
 
 /*================ HEADER ================*/
