--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html {
 body {
     background: #18191b;
     color: rgb(150, 150, 150);
-    font-family: Arial, sans-serif; 
+    font-family: sans-serif; 
     display: flex;
     justify-content: center;
 }
@@ -24,7 +24,6 @@ body {
     min-height: 100%;
     max-width: 75%;
     gap: 15px;  
-    padding: 0 20px;
 }
 
 /*================ HEADER ================*/
@@ -41,7 +40,7 @@ header {
 
 .header-container {
     flex: 0 0 auto;
-    padding-top: 80px;
+    padding-top: 96px;
 }
 
 .my-name {
@@ -94,7 +93,8 @@ main {
     display: flex;
     flex: 0 1 50%; 
     flex-direction: column;
-    padding: 80px 0;
+    padding: 96px 0;
+
     }
 
 main p {
@@ -113,5 +113,14 @@ a:hover {
 }
 
 p {
+    font-size: 16px;
     line-height: 1.5;
+}
+
+.mb-16px {
+    margin-bottom: 16px;
+}
+
+.mb-96px {
+    margin-bottom: 96px;
 }
