--- a/style.css
+++ b/style.css
@@ -72,7 +72,6 @@ header {
     display: inline-flex;
     flex-direction: column;
     margin: 60px 0 0 0;
-
     font-size: 12px;
     font-weight: 700;
 }
@@ -126,6 +125,34 @@ main {
     padding-left: 16px;
 }
 
+.project {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+}
+
+.project img {
+    height: 100px;
+    border-radius: 10px;
+    margin-right: 16px;
+}
+
+.project h3 {
+    color: aliceblue;
+    margin-bottom: 14px;
+    font-weight: 500;
+    font-size: 16px;
+}
+
+.project p {
+    font-size: 14px;
+}
+
+.project:hover {
+    background: rgba(128, 128, 128, 0.527);
+    border-radius: 15px;
+}
 
 /*======================================*/
 
@@ -139,6 +166,7 @@ a:hover {
 }
 
 p {
+    font-weight: 200;
     font-size: 16px;
     line-height: 1.5;
 }
