--- a/style.css
+++ b/style.css
@@ -111,9 +111,8 @@ main {
 
 .skills {
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
-    gap: 40px; 
+    gap: 60px; 
 }
 
 .skill {
@@ -172,6 +171,10 @@ p {
     line-height: 1.5;
 }
 
+li {
+    font-weight: 200;
+}
+
 .mb-16px {
     margin-bottom: 16px;
 }
@@ -204,6 +207,10 @@ p {
     .social {
         padding: 0;
         padding-top: 16px;
+    }
+
+    .skill {
+        justify-content: space-between;
     }
 
     .project {
