Update the 'Project' section

--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ main {
 
 .project img {
     flex: 1 1 auto;
-    height: 100px;
+    width: 150px;
     border-radius: 10px;
     margin-right: 16px;
 }
