--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ header {
     margin-top: 13px;
 }
 
-.navigation {
+nav {
     display: inline-flex;
     flex-direction: column;
     margin: 60px 0 0 0;
@@ -89,7 +89,7 @@ header {
     font-weight: 700;
 }
 
-.navigation a {
+nav a {
     display: flex;
     flex: 0 1 auto;
     padding: 16px 0;
@@ -233,7 +233,7 @@ li {
         padding: 48px 0 0 0;
     }
 
-    .navigation {
+    nav {
         display: none;
     }
 
