--- a/style.css
+++ b/style.css
@@ -67,17 +67,15 @@ header {
 
 .my-name {
     display: flex;
-    flex-direction: column;
     align-self: center;
     font-size: 45px;
     font-weight: 800;
-    padding-left: 16px;
-
 }
 
 .job-title {
+    color: white;
     font-size: 20px;
-    font-weight: 400;
+    font-weight: 300;
     margin-top: 13px;
 }
 
