--- a/style.css
+++ b/style.css
@@ -207,6 +207,11 @@ main {
     align-self: center;
 }
 
+footer p {
+    font-size: 0.9rem;
+    color: rgba(255, 255, 255, 0.4);
+}
+
 /*======================================*/
 
 .container {
