--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 video {
-    position: fixed;
+    /* position: fixed;
     top: 50%;
     left: 50%;
     min-width: 100%;
@@ -25,7 +25,14 @@ video {
     width: auto;
     height: auto;
     z-index: -100;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); */
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .wrapper {
@@ -35,6 +42,9 @@ video {
     justify-content: space-between;
     min-height: 100%;
     gap: 15px;  
+
+    z-index: 1;
+    position: relative;
 }
 
 .flex-placeholder-left,
@@ -45,6 +55,8 @@ video {
 /*================ HEADER ================*/
 
 header {
+    background: rgba(20, 20, 20, 0.8);
+
     position: sticky;
     height: 100vh;
     top: 0;
@@ -125,6 +137,8 @@ header p {
 /*================ MAIN ================*/
 
 main {
+    background: rgba(20, 20, 20, 0.8);
+
     display: flex;
     flex: 0 1 50%; 
     flex-direction: column;
