--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ html {
 }
 
 body {
-    background: #18191b;
     color: rgb(150, 150, 150);
     font-family: sans-serif; 
     display: flex;
@@ -36,12 +35,15 @@ video {
 }
 
 .wrapper {
+    background: rgba(15, 15, 15, 0.8);
+
     flex: 100  auto;
     display: flex;
     align-items: start;
     justify-content: space-between;
     min-height: 100%;
     gap: 15px;  
+    padding: 0 30px;
 
     z-index: 1;
     position: relative;
@@ -55,8 +57,6 @@ video {
 /*================ HEADER ================*/
 
 header {
-    background: rgba(20, 20, 20, 0.8);
-
     position: sticky;
     height: 100vh;
     top: 0;
@@ -123,7 +123,7 @@ a.active {
     justify-content: space-around;
     align-self: flex-start;
     gap: 16px;
-    padding-bottom: 80px;
+    padding-bottom: 96px;
 }
 
 header p {
@@ -137,8 +137,6 @@ header p {
 /*================ MAIN ================*/
 
 main {
-    background: rgba(20, 20, 20, 0.8);
-
     display: flex;
     flex: 0 1 50%; 
     flex-direction: column;
@@ -148,6 +146,9 @@ main {
 
 /*========================*/
 
+.about {
+    scroll-margin-top: 96px;
+}
 
 .skills {
     scroll-margin-top: 96px;
