--- a/style.css
+++ b/style.css
@@ -154,8 +154,6 @@ main {
 
 .experience {
     scroll-margin-top: 96px;
-    display: flex;
-    gap: 25px;
 
 }
 
@@ -208,6 +206,10 @@ main {
 
 .skills {
     scroll-margin-top: 96px;
+   
+}
+
+.skills-container {
     display: flex;
     flex-wrap: wrap;
     gap: 60px; 
@@ -291,6 +293,10 @@ footer p {
 
 /*======================================*/
 
+section h3 {
+    display: none;
+}
+
 .container {
     padding: 15px;
 }
@@ -348,6 +354,14 @@ li {
     .flex-placeholder-left,
     .flex-placeholder-right {
         display: none;
+    }
+
+    section h3 {
+        display: block;
+        font-size: 14px;
+        color: white;
+        padding-bottom: 16px;
+        font-weight: 600;
     }
 
     header {
