--- a/style.css
+++ b/style.css
@@ -36,7 +36,8 @@ video {
 
 .wrapper {
     background: rgba(21, 21, 21, 0.8);
-
+    backdrop-filter: blur(5px);
+    
     flex: 100  auto;
     display: flex;
     align-items: start;
