Add border-radius to the container with content

--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ video {
 .wrapper {
     background: rgba(21, 21, 21, 0.8);
     backdrop-filter: blur(5px);
+    border-radius: 20px;
     
     flex: 100  auto;
     display: flex;
