--- a/style.css
+++ b/style.css
@@ -15,20 +15,18 @@ body {
     justify-content: center;
 }
 
-video {
+/* video {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
+} */
 
 .wrapper {
-    background: rgba(21, 21, 21, 0.8);
-    backdrop-filter: blur(5px);
-    border-radius: 20px;
-    
+    /* backdrop-filter: blur(5px); */
+
     flex: 100  auto;
     display: flex;
     align-items: start;
