Add class to every name of section

--- a/style.css
+++ b/style.css
@@ -285,7 +285,7 @@ main {
 
 /*======================================*/
 
-section h3 {
+section .section-name {
     display: none;
 }
 
@@ -295,7 +295,7 @@ section h3 {
 }
 
 .container:hover {
-    background: rgba(255, 255, 255, 0.150);
+    background: rgba(255, 255, 255, 0.523);
     border-radius: 8px;
     transition: .15s;
 }
