--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html {
 }
 
 body {
+    background-color: rgb(30, 30, 30);
     color: rgb(150, 150, 150);
     font-family: sans-serif, 'Courier New', Courier; 
     display: flex;
