Fix border in social media icons

--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ li {
     color:  #9593BF;
 }
 
-img {
+section img {
     border: 2.5px solid #9593BF;
     border-radius: 10px;
     margin-right: 16px;
